--- a/.github/workflows/uctags-build-tools.yml
+++ b/.github/workflows/uctags-build-tools.yml
@@ -61,7 +61,7 @@ jobs:
           operating_system: freebsd
           version: ${{ matrix.target-version }}
           shell: bash
-          run: ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} freebsd-${{ matrix.target-version }}-amd64
+          run: ./pack.sh ${{ needs.check.outputs.release-version }} freebsd-${{ matrix.target-version }}-amd64
 
       - uses: actions/upload-artifact@v4
         with:
@@ -88,7 +88,7 @@ jobs:
           operating_system: openbsd
           version: ${{ matrix.target-version }}
           shell: bash
-          run: ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} openbsd-${{ matrix.target-version }}-amd64
+          run: ./pack.sh ${{ needs.check.outputs.release-version }} openbsd-${{ matrix.target-version }}-amd64
 
       - uses: actions/upload-artifact@v4
         with:
@@ -116,7 +116,7 @@ jobs:
           operating_system: netbsd
           version: ${{ matrix.target-version }}
           shell: bash
-          run: ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} netbsd-${{ matrix.target-version }}-amd64
+          run: ./pack.sh ${{ needs.check.outputs.release-version }} netbsd-${{ matrix.target-version }}-amd64
 
       - uses: actions/upload-artifact@v4
         with:
@@ -138,7 +138,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} macos-${{ matrix.target-version }}-arm64
+      - run: ./pack.sh ${{ needs.check.outputs.release-version }} macos-${{ matrix.target-version }}-arm64
 
       - uses: actions/upload-artifact@v4
         with:
@@ -160,7 +160,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} macos-${{ matrix.target-version }}-x86_64
+      - run: ./pack.sh ${{ needs.check.outputs.release-version }} macos-${{ matrix.target-version }}-x86_64
 
       - uses: actions/upload-artifact@v4
         with:
@@ -184,7 +184,7 @@ jobs:
 
       - run: |
           cat > run.sh <<EOF
-          ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} linux-glibc-${{ matrix.target-arch }}
+          ./pack.sh ${{ needs.check.outputs.release-version }} linux-glibc-${{ matrix.target-arch }}
           EOF
 
           chmod +x run.sh
@@ -230,7 +230,7 @@ jobs:
 
       - run: |
           cat > run.sh <<EOF
-          ./uctags-build-tools.sh ${{ needs.check.outputs.release-version }} linux-musl-${{ matrix.target-arch }}
+          ./pack.sh ${{ needs.check.outputs.release-version }} linux-musl-${{ matrix.target-arch }}
           EOF
 
           chmod +x run.sh
