--- a/.github/workflows/uctags-build-tools.yml
+++ b/.github/workflows/uctags-build-tools.yml
@@ -80,12 +80,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target-version: ['14.1', '14.0', '13.3', '13.2']
+        target-version: ['14.1', '14.0', '13.4', '13.3', '13.2']
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: cross-platform-actions/action@v0.25.0
+      - uses: cross-platform-actions/action@master
         with:
           operating_system: freebsd
           version: ${{ matrix.target-version }}
@@ -112,7 +112,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: cross-platform-actions/action@v0.25.0
+      - uses: cross-platform-actions/action@master
         with:
           operating_system: openbsd
           version: ${{ matrix.target-version }}
